Remove border-bottom on table head to prevent double border due to datatables’ styles

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,3 +28,6 @@
         color: #16a2b8;
     }
 }
+.table thead th {
+    border-bottom: 0;
+}
